--- a/web/index_1.html
+++ b/web/index_1.html
@@ -8,7 +8,7 @@ text {
 
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="./js/d3.v3.min.js"></script>
 <script>
 
 var diameter = 960,
@@ -43,7 +43,8 @@ d3.json("flare.json", function(error, root) {
   node.append("text")
       .attr("dy", ".3em")
       .style("text-anchor", "middle")
-      .text(function(d) { return d.className.substring(0, d.r / 3); });
+//      .text(function(d) { return d.className.substring(0, d.r / 3); });
+      .text(function(d) { return d.className.substring(0, d.r * 2 / 5); });
 });
 
 // Returns a flattened hierarchy containing all leaf nodes under the root.
