--- a/web/home.html
+++ b/web/home.html
@@ -41,7 +41,7 @@
                                                             <span class="icon-bar"></span>
                                                             <span class="icon-bar"></span>
                                                         </button>-->
-                            <a class="navbar-brand" href="#">Programmer Assistor</a>
+                            <a class="navbar-brand" href="home.html">Programmer Assistor</a>
                         </div>
                         <div id="navbar" class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
@@ -49,7 +49,6 @@
                                 <li><a href="#about">Help </a></li>
                                 <li><a href="#contact">About </a></li>
                                 <li><a href="#contact">Show </a></li>
-                                
                             </ul>
                         </div>
                     </div>
