--- a/web/styles.html
+++ b/web/styles.html
@@ -41,7 +41,7 @@
                                                             <span class="icon-bar"></span>
                                                             <span class="icon-bar"></span>
                                                         </button>-->
-                            <a class="navbar-brand" href="#">Programmer Assistor</a>
+                            <a class="navbar-brand" href="home.html">Programmer Assistor</a>
                         </div>
                         <div id="navbar" class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
@@ -74,9 +74,6 @@
         <!-- Wrap the rest of the page in another container to center all the content. -->
 
         <div class="container marketing">
-            <!-- START THE FEATURETTES -->
-
-            <hr class="featurette-divider">
 
             <div class="row featurette" id="process">
 
