--- a/web/home.html
+++ b/web/home.html
@@ -48,7 +48,7 @@
                                 <li class="active"><a href="#">Home </a></li>
                                 <li><a href="#about">Help </a></li>
                                 <li><a href="#contact">About </a></li>
-                                <li><a href="#contact">Show </a></li>
+                                <li><a href="show.html">Show </a></li>
                             </ul>
                         </div>
                     </div>
